--- a/src/app/tracks/create/page.module.scss
+++ b/src/app/tracks/create/page.module.scss
@@ -1,12 +1,9 @@
 .root {
-  box-shadow: 1px 1px 10px 5px #e0e0e0;
-  border-radius: 0.25rem;
-  padding: 1rem;
-  min-height: 370px;
-  width: 500px;
+  padding: 0 0.5rem;
+  padding-bottom: 1rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   &__title {
     display: flex;
     justify-content: center;
@@ -17,27 +14,30 @@
   }
   &__content {
     flex: auto;
+    display: flex;
+    flex-direction: column;
   }
   &__btns {
     display: flex;
     justify-content: space-between;
   }
 }
+.withActiveTrack{
+  max-height: calc(100% - var(--player-height));
+}
 
 .form {
   display: flex;
   flex-direction: column;
+  flex: 1;
   gap: 1rem;
   &__input {
-    //display: flex;
     justify-content: space-between;
     align-items: center;
     label {
-      //flex: 2;
       padding-bottom: 5px;
     }
     input {
-      //flex: 3;
       box-sizing: border-box;
       width: 100%;
     }
@@ -46,3 +46,4 @@
     }
   }
 }
+
