--- a/src/app/tracks/page.module.scss
+++ b/src/app/tracks/page.module.scss
@@ -1,8 +1,13 @@
 .root{
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  touch-action: none;
 }
 .trackHeader{
-  display: flex;
-  justify-content: space-between;
+  height: var(--trackslist-title-height);
+  -webkit-box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
+  -moz-box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
+  box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
+  padding: 0 0.5rem;
 }
