--- a/src/components/UI/Stepper/Stepper.module.scss
+++ b/src/components/UI/Stepper/Stepper.module.scss
@@ -13,7 +13,9 @@
       text-align: center;
       font-size: 12px;
       margin-top: 0.25rem;
-      //transition: all .3s;
+      @media screen and (max-width: 640px){
+        width: 80px;
+      }
     }
     &:not(:first-child)::before{
       content: '';
@@ -22,7 +24,7 @@
       width: 100%;
       height: 3px;
       right: 50%;
-      top: 33%;
+      top: calc(33% - 3px);
       transform: translateY(-50%);
     }
   }
