--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -1,10 +1,12 @@
 .player {
-  height: 60px;
+  height: var(--player-height);
   width: 100%;
   display: flex;
   align-items: center;
   padding: 0 10px;
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.59);
+  position: absolute;
+  bottom: var(--nav-height-mobile);
   &__btn{
     cursor: pointer;
   }
