--- a/src/components/wrapper/wrapper.module.scss
+++ b/src/components/wrapper/wrapper.module.scss
@@ -1,7 +1,8 @@
 .wrapper{
   max-width: var(--wrapper-width);
-  height: 100vh;
+  height: 100dvh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
