--- a/src/app/tracks/create/page.module.scss
+++ b/src/app/tracks/create/page.module.scss
@@ -1,6 +1,5 @@
 .root {
   padding: 0 0.5rem;
-  padding-bottom: 1rem;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -20,30 +19,15 @@
   &__btns {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1rem;
+  }
+  &__loading{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .withActiveTrack{
   max-height: calc(100% - var(--player-height));
 }
-
-.form {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  gap: 1rem;
-  &__input {
-    justify-content: space-between;
-    align-items: center;
-    label {
-      padding-bottom: 5px;
-    }
-    input {
-      box-sizing: border-box;
-      width: 100%;
-    }
-    textarea {
-      flex: 3;
-    }
-  }
-}
-
