--- a/src/components/trackProgress/trackProgress.module.scss
+++ b/src/components/trackProgress/trackProgress.module.scss
@@ -1,3 +1,12 @@
 .trackProgress {
-  display: flex;
+  &__range{
+    input{
+      width: 100%;
+    }
+  }
+  &__times{
+    display: flex;
+    justify-content: space-between;
+    color: lightgray;
+  }
 }
