--- a/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
+++ b/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
@@ -1,16 +1,47 @@
+
 .root{
-  height: 98%;
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   background-color: #1c1c1c;
+  height: 98%;
   position: absolute;
+  width: 100%;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
   bottom: 0px;
-  transform: translateY(100%);
-  transition: transform 0.3s;
-  -webkit-box-shadow: 0px -13px 27px -1px rgba(0, 0, 0, 0.59);
-  -moz-box-shadow: 0px -13px 27px -1px rgba(0, 0, 0, 0.59);
-  box-shadow: 0px -13px 27px -1px rgba(0, 0, 0, 0.59);
-  z-index: 1000;
-  overflow: hidden;
+  transition: 0.3s;
+  &__image{
+    border-radius: 1rem;
+    width: 300px;
+    overflow: hidden;
+    margin-top: 2rem;
+  }
+  &__progressTrack{
+    width: 100%;
+    padding: 0.25rem 2rem;
+  }
+  &__trackInfo{
+    color: lightgray;
+    align-self: flex-start;
+    margin-left: 1.5rem;
+    &_name{
+      font-size: 22px;
+      margin-bottom: 0.25rem;
+      font-weight: bold;
+    }
+    &_artist{
+      font-size: 14px;
+    }
+  }
+  &__btns{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+  &__volume{
+    width: 70%;
+    margin-top: 2rem;
+  }
 }
