refact modal and animation

--- a/src/app/tracks/page.module.scss
+++ b/src/app/tracks/page.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   overflow: hidden;
   touch-action: none;
+  background-color: #fff;
 }
 .trackHeader{
   height: var(--trackslist-title-height);
