--- a/src/components/trackitem/trackitem.module.scss
+++ b/src/components/trackitem/trackitem.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 0 5px;
   justify-content: space-between;
+  background: #eeeeee;
   &__btn{
     flex: 30px 0.5;
   }
