--- a/src/components/previewNewTrack/previewNewTrack.module.scss
+++ b/src/components/previewNewTrack/previewNewTrack.module.scss
@@ -6,7 +6,7 @@
   &__img {
     width: 250px;
     height: 250px;
-    background-color: #eaeaea;
+    background: var(--bg-soft-color-dark-theme);
     border-radius: 1rem;
     margin-bottom: 1.5rem;
     -webkit-box-shadow: 0px 0px 25px -1px rgba(0, 0, 0, 0.11);
