--- a/src/app/tracks/page.module.scss
+++ b/src/app/tracks/page.module.scss
@@ -1,9 +1,9 @@
 .root{
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  touch-action: none;
-  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  color: var(--text-color-dark-theme);
 }
 .trackHeader{
   height: var(--trackslist-title-height);
