--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 1.75rem 0.15rem 0rem 0.15rem;
+    padding: 3.5rem 0 0rem 0;
     &_overlay{
       position: fixed;
       left: 0;
