--- a/src/components/createTrackFormStepOne/CreateTrackFormStepOne.module.scss
+++ b/src/components/createTrackFormStepOne/CreateTrackFormStepOne.module.scss
@@ -12,6 +12,11 @@
         input {
             box-sizing: border-box;
             width: 100%;
+            background: var(--bg-soft-color-dark-theme);
+            color: var(--text-color-dark-theme);
+            &::placeholder{
+                color: #a8a8a8;
+            }
         }
         textarea {
             flex: 3;
