--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -3,7 +3,7 @@
   height: var(--nav-height);
   background: var(--header-color);
   @media screen and (max-width: 640px) {
-    height: calc(var(--nav-height) + 25px);
+    height: calc(var(--nav-height-mobile));
     padding-bottom: 25px;
     position: absolute;
     width: 100%;
