--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   padding: 0 10px;
-  background-color: rgba(211, 211, 211, 0.59);
+  background-color: rgb(143, 143, 143);
   position: absolute;
   bottom: var(--nav-height-mobile);
   &__btn{
