--- a/src/components/trackitem/trackitem.module.scss
+++ b/src/components/trackitem/trackitem.module.scss
@@ -1,12 +1,12 @@
 .track {
-  border: 1px solid black;
+  border: 1px solid #444444;
   border-radius: 0.3rem;
   display: flex;
   height: 46px;
   align-items: center;
   padding: 0 5px;
   justify-content: space-between;
-  background: #eeeeee;
+  background: var(--bg-soft-color-dark-theme);
   &__btn{
     flex: 30px 0.5;
   }
