--- a/src/components/wrapper/wrapper.module.scss
+++ b/src/components/wrapper/wrapper.module.scss
@@ -5,4 +5,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  //border: 2px solid red;
+  box-sizing: border-box;
+  @media screen and (display-mode: standalone){
+    height: calc(100vh);
+  }
 }
