--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,15 @@
     --bg-color-dark-theme: #363b36;
     --bg-soft-color-dark-theme: #737373;
     --text-color-dark-theme: #c9c9c9;
+
+    /*new*/
+    --color-background: #efefef;
+    --color-text: #212121;
+}
+
+[data-theme='dark'] {
+    --color-background: #363b36;
+    --color-text: #c9c9c9;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
