--- a/src/components/mainSection/MainSection.module.scss
+++ b/src/components/mainSection/MainSection.module.scss
@@ -1,6 +1,6 @@
 .main {
   height: calc(100% - var(--nav-height-mobile));
-  background-color: var(--bg-color-dark-theme);
+  background-color: var(--color-background);
   box-sizing: border-box;
 
   @media screen and (display-mode: standalone){
