--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,20 +3,24 @@
     --player-height: 60px;
     --nav-height: 50px;
     --nav-height-mobile: 75px;
-    --header-color: #252525;
     --trackslist-title-height: 30px;
-    --bg-color-dark-theme: #363b36;
-    --bg-soft-color-dark-theme: #737373;
-    --text-color-dark-theme: #c9c9c9;
-
-    /*new*/
-    --color-background: #efefef;
-    --color-text: #212121;
 }
 
 [data-theme='dark'] {
-    --color-background: #363b36;
-    --color-text: #c9c9c9;
+    --color-background: #252525;
+    --color-background-soft: #484848;
+    --color-text: #e7e7e7;
+    --color-text-soft: #989898;
+    --navbar-color: #252525;
+    --color-background-player: #252525;
+}
+[data-theme='light'] {
+    --color-background: #f5f5f5;
+    --color-background-soft: #d0d0d0;
+    --color-text: #212121;
+    --color-text-soft: #1c244d;
+    --navbar-color: #e6eaea;
+    --color-background-player: #e6eaea;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -46,6 +50,8 @@ footer, header, hgroup, menu, nav, section {
 html {
     height: 100%;
     touch-action:none;
+    overflow: hidden;
+    overscroll-behavior: none;
 }
 body {
     line-height: 1;
