--- a/src/app/tracks/page.module.scss
+++ b/src/app/tracks/page.module.scss
@@ -1,14 +1,14 @@
 .root{
-  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  color: var(--text-color-dark-theme);
 }
 .trackHeader{
   height: var(--trackslist-title-height);
-  -webkit-box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
-  -moz-box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
-  box-shadow: 0px 8px 19px -6px rgba(34, 60, 80, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
   padding: 0 0.5rem;
 }
