--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -4,15 +4,34 @@
   display: flex;
   align-items: center;
   padding: 0 10px;
-  background-color: rgb(143, 143, 143);
+  background-color: var(--color-background-player);
   position: absolute;
   bottom: var(--nav-height-mobile);
-  &__btn{
+  border-top: 1px solid var(--color-background-soft);
+  &__playPausebtn{
     cursor: pointer;
+    color: var(--color-text);
+    padding: 5px;
+    border-radius: 50%;
   }
-  &__trackProgress{
+  &__trackInfo{
     flex: auto;
-    display: flex;
-    justify-content: center;
+    color: var(--color-text);
+    &_name{
+      display: flex;
+      justify-content: center;
+    }
+    &_artist{
+      display: flex;
+      justify-content: center;
+      font-size: 12px;
+      color: var(--color-text-soft);
+    }
+  }
+  &__closeBtn{
+    cursor: pointer;
+    color: var(--color-text);
+    padding: 5px;
+    border-radius: 50%;
   }
 }
