--- a/src/components/trackitem/trackitem.module.scss
+++ b/src/components/trackitem/trackitem.module.scss
@@ -1,33 +1,42 @@
 .track {
-  border: 1px solid #444444;
   border-radius: 0.3rem;
   display: flex;
-  height: 46px;
+  height: 50px;
   align-items: center;
-  padding: 0 5px;
   justify-content: space-between;
-  background: var(--bg-soft-color-dark-theme);
-  &__btn{
-    flex: 30px 0.5;
-  }
+  background: var(--color-background);
+  color: var(--color-text);
+  gap: 0.5rem;
   &__img{
-    width: 40px;
-    height: 40px;
-    flex: 40px 0.5;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
     img{
       border-radius: 5px;
     }
+    &_gif{
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+    }
   }
   &__info{
-    flex: 100px 6;
+    flex: auto;
     &__trackName{
       font-weight: bold;
     }
     &__artistName{
       font-size: 13px;
+      color: var(--color-text-soft);
     }
   }
   &__duration{
-    flex: 30px 0.5;
+    width: 40px;
+    color: var(--color-text-soft);
   }
 }
