--- a/src/components/wrapper/wrapper.module.scss
+++ b/src/components/wrapper/wrapper.module.scss
@@ -5,8 +5,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  //border: 2px solid red;
   box-sizing: border-box;
+  background-color: var(--color-background);
+  color: var(--color-text);
   @media screen and (display-mode: standalone){
     height: calc(100vh);
   }
