--- a/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
+++ b/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
@@ -7,11 +7,17 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  &__handle {
+    width: 2.5rem;
+    height: 0.25rem;
+    background: var(--color-background-soft);
+    border-radius: 0.5rem;
+    margin: 0.25rem auto 0;
+  }
   &__image{
     border-radius: 1rem;
     width: 300px;
     overflow: hidden;
-    margin-top: 2rem;
   }
   &__progressTrack{
     width: 100%;
