--- a/src/components/trackProgress/trackProgress.module.scss
+++ b/src/components/trackProgress/trackProgress.module.scss
@@ -1,7 +1,62 @@
 .trackProgress {
   &__range{
-    input{
+    input[type="range"] {
+      -webkit-appearance: none;
+      appearance: none;
+      background: transparent;
+      cursor: pointer;
       width: 100%;
+    }
+
+    /* Removes default focus */
+    input[type="range"]:focus {
+      outline: none;
+    }
+
+    /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+    /* slider track */
+    input[type="range"]::-webkit-slider-runnable-track {
+      background-color: #a9bfc7;
+      border-radius: 0.5rem;
+      height: 0.5rem;
+    }
+
+    /* slider thumb */
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none; /* Override default look */
+      appearance: none;
+      margin-top: -8px; /* Centers thumb on the track */
+      background-color: #2a8cac;
+      border-radius: 1rem;
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+
+    input[type="range"]:focus::-webkit-slider-thumb {
+      outline: 3px solid #2a8cac;
+      outline-offset: 0.125rem;
+    }
+
+    /*********** Firefox styles ***********/
+    /* slider track */
+    input[type="range"]::-moz-range-track {
+      background-color: #a9bfc7;
+      border-radius: 0.5rem;
+      height: 0.5rem;
+    }
+
+    /* slider thumb */
+    input[type="range"]::-moz-range-thumb {
+      background-color: #2a8cac;
+      border: none; /*Removes extra border that FF applies*/
+      border-radius: 1rem;
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+
+    input[type="range"]:focus::-moz-range-thumb{
+      outline: 3px solid #2a8cac;
+      outline-offset: 0.125rem;
     }
   }
   &__times{
