--- a/src/components/trackProgress/trackProgress.module.scss
+++ b/src/components/trackProgress/trackProgress.module.scss
@@ -62,6 +62,6 @@
   &__times{
     display: flex;
     justify-content: space-between;
-    color: lightgray;
+    color: var(--color-text);
   }
 }
