--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,14 +13,16 @@
     --color-text-soft: #989898;
     --navbar-color: #252525;
     --color-background-player: #252525;
+    --btn-color-background: #5cdb95;
 }
 [data-theme='light'] {
-    --color-background: #f5f5f5;
+    --color-background: #e6eaea;
     --color-background-soft: #d0d0d0;
     --color-text: #212121;
-    --color-text-soft: #1c244d;
+    --color-text-soft: #838383;
     --navbar-color: #e6eaea;
     --color-background-player: #e6eaea;
+    --btn-color-background: #2779a7;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
