--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,9 +1,15 @@
 .input{
-  width: 300px;
+  //width: 300px;
   font-size: 16px;
   padding: 6px 5px;
-  border: 1px solid #cecece;
-  background: #ffffff;
+  border: 1px solid var(--color-background-soft);
+  background: var(--color-background-soft);
   border-radius: 0.25rem;
   outline: none;
+  box-sizing: border-box;
+  width: 100%;
+  color: var(--color-text);
+  &::placeholder{
+    color: var(--color-text-soft);
+  }
 }
