--- a/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
+++ b/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
@@ -1,6 +1,6 @@
 
 .root{
-  background-color: #1c1c1c;
+  background-color: var(--color-background);
   height: 100%;
   width: 100%;
   display: flex;
@@ -18,13 +18,16 @@
     border-radius: 1rem;
     width: 300px;
     overflow: hidden;
+    img {
+      object-fit: cover;
+    }
   }
   &__progressTrack{
     width: 100%;
     padding: 0.25rem 2rem;
   }
   &__trackInfo{
-    color: lightgray;
+    color: var(--color-text);
     align-self: flex-start;
     margin-left: 1.5rem;
     &_name{
@@ -40,6 +43,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+    color: var(--color-text);
   }
   &__volume{
     width: 70%;
