--- a/src/components/trackitem/trackitem.module.scss
+++ b/src/components/trackitem/trackitem.module.scss
@@ -15,6 +15,7 @@
     border-radius: 5px;
     img{
       border-radius: 5px;
+      object-fit: cover;
     }
     &_gif{
       position: absolute;
