--- a/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
+++ b/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
@@ -7,19 +7,47 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  position: relative;
   &__handle {
     width: 2.5rem;
     height: 0.25rem;
     background: var(--color-background-soft);
     border-radius: 0.5rem;
     margin: 0.25rem auto 0;
+    position: relative;
+    z-index: 1;
+  }
+  &__bgGlass{
+    position: absolute;
+    width: calc(100% + 60px);
+    max-width: 600px;
+    aspect-ratio: 1/1;
+    top: -130px;
+    left: -30px;
+    z-index: 0;
+    &:before {
+      position: absolute;
+      content: '';
+      background: inherit;
+      height: calc(100% + 60px);
+      width: 100%;
+      left: 0;
+      top: 0;
+      filter: blur(15px);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
   }
   &__image{
     border-radius: 1rem;
-    width: 300px;
+    width: 80%;
+    aspect-ratio: 1/1;
     overflow: hidden;
+    max-width: 400px;
     img {
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
   }
   &__progressTrack{
