--- a/src/components/trackitem/trackitem.module.scss
+++ b/src/components/trackitem/trackitem.module.scss
@@ -27,7 +27,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      color: var(--color-background);
+      color: #e6eaea;
     }
   }
   &__info{
