--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,7 @@ html {
     touch-action:none;
     overflow: hidden;
     overscroll-behavior: none;
+    background-color: #000;
 }
 body {
     line-height: 1;
