--- a/src/components/UI/ModalWithLayerEffect/ModalWithLayerEffect.module.scss
+++ b/src/components/UI/ModalWithLayerEffect/ModalWithLayerEffect.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 3.5rem 0 0rem 0;
+    padding: 3.5rem 0 0 0;
     &_overlay{
       position: fixed;
       left: 0;
