--- a/src/components/wrapper/wrapper.module.scss
+++ b/src/components/wrapper/wrapper.module.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   background-color: var(--color-background);
   color: var(--color-text);
+  overflow: hidden;
   @media screen and (display-mode: standalone){
     height: calc(100vh);
   }
