--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+@media screen and (min-width: 640px){
+    html{
+        background: var(--color-background-soft);
+    }
+}
