--- a/src/components/mainSection/MainSection.module.scss
+++ b/src/components/mainSection/MainSection.module.scss
@@ -5,13 +5,15 @@
 
   @media screen and (display-mode: standalone){
     padding-top: 40px;
-    height: calc(100% - var(--nav-height-mobile));
+  }
+  @media screen and (min-width: 640px){
+    height: calc(100% - var(--nav-height));
   }
 }
 
 .withActiveTrack{
   height: calc(100% - var(--nav-height-mobile) - var(--player-height));
-  @media screen and (display-mode: standalone){
-    height: calc(100% - var(--nav-height-mobile) - var(--player-height));
+  @media screen and (min-width: 640px){
+    height: calc(100% - var(--nav-height) - var(--player-height));
   }
 }
