--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -8,6 +8,9 @@
   position: absolute;
   bottom: var(--nav-height-mobile);
   border-top: 1px solid var(--color-background-soft);
+  @media screen and (min-width: 640px){
+    bottom: 0;
+  }
   &__playPausebtn{
     cursor: pointer;
     color: var(--color-text);
