--- a/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
+++ b/src/components/player/playerFullScreen/PlayerFullScreen.module.scss
@@ -6,13 +6,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   position: relative;
   &__handle {
     width: 2.5rem;
-    height: 0.25rem;
+    min-height: 5px;
     background: var(--color-background-soft);
-    border-radius: 0.5rem;
+    border-radius: 3px;
     margin: 0.25rem auto 0;
     position: relative;
     z-index: 1;
