--- a/src/components/player/playerFullScreen/trackImage/TrackImage.module.scss
+++ b/src/components/player/playerFullScreen/trackImage/TrackImage.module.scss
@@ -1,34 +1,44 @@
-.imageBlur{
-  position: absolute;
-  width: calc(100% + 60px);
-  max-width: 600px;
+.root{
+  width: 80%;
+  max-height: 350px;
+  max-width: 350px;
   aspect-ratio: 1/1;
-  top: -130px;
-  left: -30px;
-  z-index: 0;
-  &:before {
+  margin-top: 1rem;
+  position: relative;
+  &__imageBlur{
     position: absolute;
-    content: '';
-    background: inherit;
-    height: calc(100% + 60px);
+    width: calc(100% + 300px);
+    height: calc(90% + 50px);
+    top: -50px;
+    left: -150px;
+    z-index: 0;
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: calc(100% + 30px);
+      background: inherit;
+      filter: blur(10px);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      z-index: 10;
+    }
+  }
+  &__image{
+    border-radius: 1rem;
+    overflow: hidden;
     width: 100%;
-    left: 0;
-    top: 0;
-    filter: blur(15px);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 }
 
-.image{
-  border-radius: 1rem;
-  width: 80%;
-  aspect-ratio: 1/1;
-  overflow: hidden;
-  max-width: 400px;
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-}
+
+
+
