--- a/src/components/tracklist/tracklist.module.scss
+++ b/src/components/tracklist/tracklist.module.scss
@@ -6,4 +6,7 @@
   gap: 10px;
   overflow-y: scroll;
   padding: 0.5rem 0.5rem;
+  @media screen and (min-width: 640px){
+    overflow-y: auto;
+  }
 }
