--- a/src/components/UI/ModalWithLayerEffect/ModalWithLayerEffect.module.scss
+++ b/src/components/UI/ModalWithLayerEffect/ModalWithLayerEffect.module.scss
@@ -19,6 +19,7 @@
       background-color: rgba(0,0,0,0.4);
     }
     &_content{
+      position: absolute;
       z-index: 0;
       width: 100%;
       height: 100%;
@@ -26,6 +27,16 @@
       border-top-right-radius: 0.5rem;
       overflow: hidden;
       box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+      background-color: var(--color-background);
+      &_handle {
+        width: 2.5rem;
+        height: 0.25rem;
+        background: var(--color-background-soft);
+        border-radius: 0.5rem;
+        margin: 0.25rem auto 0.25rem;
+        position: relative;
+        z-index: 1;
+      }
     }
   }
 
