--- a/src/components/player/playerFullScreen/trackImage/TrackImage.module.scss
+++ b/src/components/player/playerFullScreen/trackImage/TrackImage.module.scss
@@ -1,14 +1,14 @@
 .root{
   width: 80%;
-  max-height: 350px;
-  max-width: 350px;
+  max-height: 310px;
+  max-width: 310px;
   aspect-ratio: 1/1;
   margin-top: 1rem;
   position: relative;
   &__imageBlur{
     position: absolute;
     width: calc(100% + 300px);
-    height: calc(90% + 50px);
+    height: calc(85% + 50px);
     top: -50px;
     left: -150px;
     z-index: 0;
@@ -34,7 +34,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
     }
   }
 }
