--- a/src/components/wrapper/wrapper.module.scss
+++ b/src/components/wrapper/wrapper.module.scss
@@ -2,14 +2,17 @@
   max-width: var(--wrapper-width);
   height: 100dvh;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  box-sizing: border-box;
-  background-color: var(--color-background);
-  color: var(--color-text);
-  overflow: hidden;
   @media screen and (display-mode: standalone){
     height: calc(100vh);
+  }
+  &__root{
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: var(--color-background);
+    color: var(--color-text);
   }
 }
