--- a/src/app/albums/[id]/page.module.scss
+++ b/src/app/albums/[id]/page.module.scss
@@ -12,9 +12,18 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-
-        //height: 100%;
         object-fit: contain;
+      }
+    }
+    &_nameAndOptions {
+      margin-left: calc(0.5rem + 30px);
+      margin-right: 0.5rem;
+      display: flex;
+      align-items: center;
+      &_name {
+        flex: auto;
+        display: flex;
+        justify-content: center;
       }
     }
     &_title{
