--- a/src/app/create/page.module.scss
+++ b/src/app/create/page.module.scss
@@ -1,2 +1,14 @@
 .root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  &__btns {
+    flex: 0.5;
+    margin-top: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+  }
 }
