--- a/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
+++ b/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
@@ -48,3 +48,33 @@
     }
   }
 }
+
+.album {
+  border-radius: 0.3rem;
+  display: flex;
+  height: 50px;
+  align-items: center;
+  color: var(--color-text);
+  gap: 0.5rem;
+  &__img {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+    img {
+      border-radius: 5px;
+      object-fit: cover;
+    }
+  }
+  &__info{
+    flex: auto;
+    &__albumName{
+      font-weight: bold;
+    }
+    &__authorName{
+      font-size: 13px;
+      color: var(--color-text-soft);
+    }
+  }
+}
