--- a/src/components/track/previewNewTrack/previewNewTrack.module.scss
+++ b/src/components/track/previewNewTrack/previewNewTrack.module.scss
@@ -9,13 +9,13 @@
     background: var(--color-background-soft);
     border-radius: 1rem;
     margin-bottom: 1.5rem;
-    -webkit-box-shadow: 0px 0px 25px -1px var(--color-background-soft);
-    -moz-box-shadow: 0px 0px 25px -1px var(--color-background-soft);
-    box-shadow: 0px 0px 10px -1px var(--color-background-soft);
+    -webkit-box-shadow: 0 0 25px -1px var(--color-background-soft);
+    -moz-box-shadow: 0 0 25px -1px var(--color-background-soft);
+    box-shadow: 0 0 10px -1px var(--color-background-soft);
     img {
-      -webkit-box-shadow: 0px 0px 25px -1px var(--color-background-soft);
-      -moz-box-shadow: 0px 0px 25px -1px var(--color-background-soft);
-      box-shadow: 0px 0px 25px -1px var(--color-background-soft);
+      -webkit-box-shadow: 0 0 25px -1px var(--color-background-soft);
+      -moz-box-shadow: 0 0 25px -1px var(--color-background-soft);
+      box-shadow: 0 0 25px -1px var(--color-background-soft);
       object-fit: cover;
     }
   }
