--- a/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
+++ b/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
@@ -49,7 +49,15 @@
   }
 }
 
+.albumList{
+  padding: 0 1rem 0 1rem;
+  margin-bottom: 0.5rem;
+  overflow: scroll;
+  height: 140px;
+}
+
 .album {
+  margin-top: 0.5rem;
   border-radius: 0.3rem;
   display: flex;
   height: 50px;
