--- a/src/components/album/albumList/AlbumList.module.scss
+++ b/src/components/album/albumList/AlbumList.module.scss
@@ -3,8 +3,7 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  //gap: 1rem;
   padding: 0.5rem 0;
   justify-content: space-around;
-  overflow: scroll;
+  overflow-y: auto;
 }
