--- a/src/components/navbar/navItem/NavItem.module.scss
+++ b/src/components/navbar/navItem/NavItem.module.scss
@@ -1,11 +1,25 @@
 .link {
   text-decoration: none;
   color: #818181;
+  transition: all ease 0.5s;
+  @media screen and (min-width: 640px) {
+    &:hover {
+      color: var(--color-text);
+      text-decoration: underline;
+    }
+  }
   .linkTitle {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 11px;
+    @media screen and (min-width: 640px) {
+      font-size: 18px;
+      &__icon {
+        display: none;
+      }
+    }
+
   }
 }
 
