--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -17,10 +17,11 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 2rem;
-  @media screen and (max-width: 640px) {
-    justify-content: space-around;
-    padding: 0 2rem;
+  justify-content: space-around;
+  padding: 0 2rem;
+  @media screen and (min-width: 640px) {
+    justify-content: space-between;
+    padding: 0 17%;
   }
 }
