--- a/src/components/player/playerButtons/PlayerButtons.module.scss
+++ b/src/components/player/playerButtons/PlayerButtons.module.scss
@@ -3,4 +3,25 @@
   align-items: center;
   gap: 2rem;
   color: var(--color-text);
+  &__btnSmall {
+    display: none;
+    @media screen and (min-width: 640px){
+      display: block;
+      width: 25px;
+      height: 25px;
+      svg{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  &__btnLarge {
+    width: 40px;
+    height: 40px;
+    svg{
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
+
