--- a/src/components/player/playerBar/PlayerBar.module.scss
+++ b/src/components/player/playerBar/PlayerBar.module.scss
@@ -20,6 +20,9 @@
   &__trackInfo{
     flex: auto;
     color: var(--color-text);
+    @media screen and (min-width: 640px){
+      min-width: 200px;
+    }
     &_name{
       display: flex;
       justify-content: center;
@@ -29,6 +32,20 @@
       justify-content: center;
       font-size: 12px;
       color: var(--color-text-soft);
+    }
+  }
+  &__progress{
+    display: none;
+    @media screen and (min-width: 640px){
+      width: 100%;
+      display: block;
+    }
+  }
+  &__volume{
+    display: none;
+    @media screen and (min-width: 640px){
+      display: block;
+      min-width: 200px;
     }
   }
   &__closeBtn{
