--- a/src/components/track/trackInfo/TrackInfo.module.scss
+++ b/src/components/track/trackInfo/TrackInfo.module.scss
@@ -1,10 +1,29 @@
-.root{
-  flex: auto;
-  &__trackName{
-    font-weight: bold;
+.track {
+  border-radius: 0.3rem;
+  display: flex;
+  //height: 50px;
+  align-items: center;
+  color: var(--color-text);
+  gap: 0.5rem;
+  &__img {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+    img {
+      border-radius: 5px;
+      object-fit: cover;
+    }
   }
-  &__artistName{
-    font-size: 13px;
-    color: var(--color-text-soft);
+  &__info{
+    flex: auto;
+    &__trackName{
+      font-weight: bold;
+    }
+    &__artistName{
+      font-size: 13px;
+      color: var(--color-text-soft);
+    }
   }
 }
