--- a/src/app/settings/page.module.scss
+++ b/src/app/settings/page.module.scss
@@ -1,6 +1,8 @@
 .root {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
+  gap: 2rem;
 }
