--- a/src/components/track/sceletonTracksPage/SceletonTracksPage.module.scss
+++ b/src/components/track/sceletonTracksPage/SceletonTracksPage.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   &__title{
-    height: var(--trackslist-title-height);
+    height: var(--trackslist-title-height);;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,11 +14,11 @@
     padding: 0 0.5rem;
   }
   &__list{
-    flex: auto;
+    height: calc(100% - var(--trackslist-title-height));
     display: flex;
     flex-direction: column;
     gap: 10px;
-    overflow-y: auto;
+    overflow-y: hidden;
     padding: 0.5rem 0.5rem;
   }
   &__item{
