--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -5,6 +5,11 @@
   border-radius: 0.5rem;
   font-size: 14px;
   border: none;
+  @media screen and (min-width: 640px){
+    &:hover{
+      cursor: pointer;
+    }
+  }
   &:disabled {
     background-color: var(--color-background);
     color: var(--color-text-soft);
