--- a/src/components/player/playerButtons/PlayerButtons.module.scss
+++ b/src/components/player/playerButtons/PlayerButtons.module.scss
@@ -15,6 +15,7 @@
       svg{
         width: 100%;
         height: 100%;
+        cursor: pointer;
       }
     }
   }
@@ -25,6 +26,12 @@
       width: 100%;
       height: 100%;
     }
+  }
+}
+
+.btn{
+  @media screen and (min-width: 640px){
+    cursor: pointer;
   }
 }
 
