--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -3,4 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--color-background);
+  color: var(--color-text)
 }
