--- a/src/app/signin/page.module.scss
+++ b/src/app/signin/page.module.scss
@@ -1,22 +1,29 @@
 .root{
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: center;
   align-items: center;
-  h2{
+  gap: 1rem;
+  &__title{
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 1rem;
   }
-  &__wrapper{
+  &__regLink{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 0.25rem;
     align-items: center;
-    max-width: 250px;
-    margin: 0 auto;
-    gap: 1rem;
-    width: 200px;
+  }
+}
+
+.link {
+  text-decoration: none;
+  color: var(--color-link);
+  @media screen and (min-width: 640px){
+    text-decoration: underline;
+    &:hover{
+      text-decoration: none;
+    }
   }
 }
