--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
     --btn-color-background: #5cdb95;
     --color-active: #2461da;
     --color-link: #2a8cac;
+    --color-error-msg: coral;
 }
 [data-theme='light'] {
     --color-background: #e6eaea;
@@ -28,6 +29,7 @@
     --btn-color-background: #2779a7;
     --color-active: #2461da;
     --color-link: #2a8cac;
+    --color-error-msg: #ff2424;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
