css settings page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 [data-theme='light'] {
     --color-background: #e6eaea;
-    --color-background-soft: #d0d0d0;
+    --color-background-soft: #e0e0e0;
     --color-text: #212121;
     --color-text-soft: #838383;
     --navbar-color: #e6eaea;
