--- a/src/components/UI/themeToggle/themeToggle.module.scss
+++ b/src/components/UI/themeToggle/themeToggle.module.scss
@@ -1,16 +1,29 @@
 .root {
-    width: 40px;
-    height: 20px;
-    border-radius: 50px;
-    cursor: pointer;
+    background: var(--color-background-soft);
     display: flex;
     align-items: center;
+    height: 36px;
+    width: 100%;
+    border-radius: 0.5rem;
+    color: var(--color-text);
+    padding: 0 1rem;
     justify-content: space-between;
-    position: relative;
-    transition: .3s;
-    padding-right: 3px;
-    padding-left: 2px;
-    user-select: none;
+    gap: 1rem;
+    &__switch {
+        width: 40px;
+        height: 20px;
+        border-radius: 50px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        transition: .3s;
+        padding-right: 3px;
+        padding-left: 2px;
+        user-select: none;
+
+    }
     &__ball {
         position: absolute;
         width: 14px;
@@ -25,3 +38,5 @@
         background-color: #ffdc00;
     }
 }
+
+
