--- a/src/components/track/trackitem/trackitem.module.scss
+++ b/src/components/track/trackitem/trackitem.module.scss
@@ -4,7 +4,7 @@
   height: 50px;
   align-items: center;
   justify-content: space-between;
-  background: var(--color-background);
+  //background: var(--color-background);
   color: var(--color-text);
   gap: 0.5rem;
   @media screen and (min-width: 640px){
