--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,5 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 0 0.5rem;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+  gap: 1rem;
 }
