--- a/src/components/player/playerBar/PlayerBar.module.scss
+++ b/src/components/player/playerBar/PlayerBar.module.scss
@@ -22,6 +22,7 @@
     color: var(--color-text);
     display: flex;
     justify-content: center;
+    overflow: hidden;
     @media screen and (min-width: 640px){
       min-width: 190px;
       justify-content: flex-start;
