--- a/src/components/player/playerTrackInfo/PlayerTrackInfo.module.scss
+++ b/src/components/player/playerTrackInfo/PlayerTrackInfo.module.scss
@@ -25,6 +25,9 @@
       font-weight: bold;
       display: flex;
       justify-content: center;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       @media screen and (min-width: 640px){
         display: block;
       }
