--- a/src/components/track/trackitem/trackitem.module.scss
+++ b/src/components/track/trackitem/trackitem.module.scss
@@ -4,7 +4,6 @@
   height: 50px;
   align-items: center;
   justify-content: space-between;
-  //background: var(--color-background);
   color: var(--color-text);
   gap: 0.5rem;
   @media screen and (min-width: 640px){
@@ -15,5 +14,6 @@
   }
   &__info{
     flex: auto;
+    overflow: hidden;
   }
 }
