--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     bottom: 0;
     left: 0;
-    border-top: 1px solid var(--color-background-soft);
+    border-top: 1px solid var(--color-border);
     z-index: 1;
   }
 }
