--- a/src/components/player/playerBar/PlayerBar.module.scss
+++ b/src/components/player/playerBar/PlayerBar.module.scss
@@ -7,7 +7,7 @@
   background-color: var(--color-background-player);
   position: absolute;
   bottom: var(--nav-height-mobile);
-  border-top: 1px solid var(--color-background-soft);
+  border-top: 1px solid var(--color-border);
   @media screen and (min-width: 640px){
     bottom: 0;
   }
