add addTrackToFavorites method

--- a/src/components/player/trackImage/TrackImage.module.scss
+++ b/src/components/player/trackImage/TrackImage.module.scss
@@ -5,6 +5,7 @@
   aspect-ratio: 1/1;
   margin-top: 1rem;
   position: relative;
+  margin-bottom: 1rem;
   &__imageBlur{
     position: absolute;
     width: calc(100% + 300px);
