add album item and fix caruselitem

--- a/src/components/UI/block/Block.module.scss
+++ b/src/components/UI/block/Block.module.scss
@@ -1,4 +1,6 @@
 .block{
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-background-soft);
   height: 223px;
   border-radius: 0.5rem;
