--- a/src/components/album/albumItem/AlbumItem.module.scss
+++ b/src/components/album/albumItem/AlbumItem.module.scss
@@ -1,35 +1,32 @@
 .root{
   color: var(--color-text);
-  width: calc(50% - 0.5rem);
-  height: fit-content;
-  max-width: 300px;
-  overflow: hidden;
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  margin-bottom: 1rem;
-  &__author{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20px;
-    font-size: 14px;
-  }
-  &__title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 25px;
-    font-size: 16px;
+  display: flex;
+  height: 165px;
+  gap: 0.5rem;
+  align-items: center;
+  @media screen and (min-width: 640px){
+    cursor: pointer;
   }
   &__image{
-    width: 100%;
-    border-radius: 0.5rem;
+    min-width: 165px;
+    height: 165px;
     overflow: hidden;
-    aspect-ratio: 1/1;
+    border-radius: 0.5rem;
     img{
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+  &__info {
+    overflow: hidden;
+    &_title{
+      font-size: 18px;
+      font-weight: bold;
+      word-wrap: break-word;
+    }
+    &_author{
+      word-wrap: break-word;
     }
   }
 }
