--- a/src/components/album/albumList/AlbumList.module.scss
+++ b/src/components/album/albumList/AlbumList.module.scss
@@ -1,9 +1,8 @@
 .root{
-  width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  padding: 0.5rem 0;
-  justify-content: space-around;
-  overflow-y: auto;
+  flex-direction: column;
+  gap: 10px;
+  overflow-y: scroll;
+  padding: 0.5rem;
 }
