--- a/src/app/myalbums/page.module.scss
+++ b/src/app/myalbums/page.module.scss
@@ -13,6 +13,8 @@
   }
   &__albums{
     height: calc(100% - var(--trackslist-title-height));
+    display: flex;
+    flex-direction: column;
   }
 }
 
