--- a/src/components/UI/themeToggle/themeToggle.module.scss
+++ b/src/components/UI/themeToggle/themeToggle.module.scss
@@ -9,6 +9,9 @@
     padding: 0 1rem;
     justify-content: space-between;
     gap: 1rem;
+    @media screen and (min-width: 640px){
+        cursor: pointer;
+    }
     &__switch {
         width: 40px;
         height: 20px;
