--- a/src/components/player/playerBar/PlayerBar.module.scss
+++ b/src/components/player/playerBar/PlayerBar.module.scss
@@ -34,6 +34,7 @@
     @media screen and (min-width: 640px){
       width: 100%;
       display: block;
+      padding: 0 0.5rem;
     }
   }
   &__volume{
