--- a/src/components/track/trackProgress/trackProgress.module.scss
+++ b/src/components/track/trackProgress/trackProgress.module.scss
@@ -1,67 +1,93 @@
-.trackProgress {
-  &__range{
-    input[type="range"] {
-      -webkit-appearance: none;
-      appearance: none;
-      background: transparent;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    /* Removes default focus */
-    input[type="range"]:focus {
-      outline: none;
-    }
-
-    /******** Chrome, Safari, Opera and Edge Chromium styles ********/
-    /* slider track */
-    input[type="range"]::-webkit-slider-runnable-track {
-      background-color: #a9bfc7;
-      border-radius: 0.5rem;
-      height: 0.5rem;
-    }
-
-    /* slider thumb */
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none; /* Override default look */
-      appearance: none;
-      margin-top: -8px; /* Centers thumb on the track */
-      background-color: #2a8cac;
-      border-radius: 1rem;
-      height: 1.5rem;
-      width: 1.5rem;
-    }
-
-    input[type="range"]:focus::-webkit-slider-thumb {
-      outline: 3px solid #2a8cac;
-      outline-offset: 0.125rem;
-    }
-
-    /*********** Firefox styles ***********/
-    /* slider track */
-    input[type="range"]::-moz-range-track {
-      background-color: #a9bfc7;
-      border-radius: 0.5rem;
-      height: 0.5rem;
-    }
-
-    /* slider thumb */
-    input[type="range"]::-moz-range-thumb {
-      background-color: #2a8cac;
-      border: none; /*Removes extra border that FF applies*/
-      border-radius: 1rem;
-      height: 1.5rem;
-      width: 1.5rem;
-    }
-
-    input[type="range"]:focus::-moz-range-thumb{
-      outline: 3px solid #2a8cac;
-      outline-offset: 0.125rem;
-    }
+.root {
+  height: 18px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  input[type=range] {
+    -webkit-appearance: none;
+    margin: 7px 0;
+    width: 100%;
   }
-  &__times{
-    display: flex;
-    justify-content: space-between;
-    color: var(--color-text);
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #a9bfc7;
+    border-radius: 20px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #2a8cac;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -6px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #a9bfc7;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #a9bfc7;
+    border-radius: 20px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #2a8cac;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #a9bfc7;
+    border: 0px solid #000000;
+    border-radius: 40px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #a9bfc7;
+    border: 0px solid #000000;
+    border-radius: 40px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 0px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #2a8cac;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #a9bfc7;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #a9bfc7;
   }
 }
