--- a/src/components/volumeRange/volumeRange.module.scss
+++ b/src/components/volumeRange/volumeRange.module.scss
@@ -17,13 +17,13 @@
       height: 10px;
       cursor: pointer;
       animate: 0.2s;
-      box-shadow: 0px 0px 0px #000000;
+      box-shadow: 0 0 0 #000000;
       background: #d6d8d1;
       border-radius: 13px;
       border: 2px solid #bbbbbb;
     }
     input[type=range]::-webkit-slider-thumb {
-      box-shadow: 0px 0px 0px #ffffff;
+      box-shadow: 0 0 0 #ffffff;
       border: 3px solid #b0b0b0;
       height: 40px;
       width: 40px;
@@ -94,3 +94,4 @@
     }
   }
 }
+
