--- a/src/components/player/progress/Progress.module.scss
+++ b/src/components/player/progress/Progress.module.scss
@@ -1,10 +1,12 @@
 .root{
   width: 100%;
   padding: 0.25rem 2rem;
+  margin-bottom: 1rem;
   @media screen and (min-width: 640px){
     display: flex;
     padding: 0;
     gap: 0.5rem;
+    margin-bottom: 0;
   }
   &__currentTime{
     display: none;
