--- a/src/components/track/trackOptionsItem/TrackOptionsItem.module.scss
+++ b/src/components/track/trackOptionsItem/TrackOptionsItem.module.scss
@@ -9,7 +9,7 @@
     top: 0;
     left: -0.5rem;
     right: -0.5rem;
-    bottom: 0;
+    bottom: -1px;
     background-color: rgba(0, 0, 0, 0.32);
     z-index: 1;
   }
